--- a/PIA_BackEnd/appsettings.Development.json
+++ b/PIA_BackEnd/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "connectionStrings": {
+    "defaultConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=PIABackEnd;Integrated Security=True;Trusted_Connection=true"
   }
 }
