--- a/PIA_BackEnd/appsettings.Development.json
+++ b/PIA_BackEnd/appsettings.Development.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "PIA_Backend": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
